Extend get twins endpoint for pagination parameters
