# semantics/services/digital-twin-registry-openapi.yaml
@@ -31,6 +31,24 @@ paths:
             maxLength: 200
           name: value
           in: query
+        - in: query
+          name: pageSize
+          required: true
+          schema:
+            default: 10
+            type: integer
+            enum:
+              - 10
+              - 50
+              - 100
+            description: Size of the pages that the results should be partitioned in
+        - in: query
+          name: page
+          required: true
+          schema:
+            default: 0
+            type: integer
+            description: The page to return
       responses:
         '200':
           description: Successful Response
