# semantics/services/src/main/java/net/catenax/semantics/registry/CustomTwinsApiDelegate.java
@@ -63,8 +63,8 @@ public class CustomTwinsApiDelegate implements TwinsApiDelegate {
    }
 
    @Override
-   public ResponseEntity<DigitalTwinCollection> getTwinByQuery( final String key, final String value ) {
-      DigitalTwinCollection twinCollection = persistence.getTwins(key, value);
+   public ResponseEntity<DigitalTwinCollection> getTwinByQuery(Integer pageSize, Integer page, String key, String value) {
+      DigitalTwinCollection twinCollection = persistence.getTwins(key, value, pageSize, page);
 
       return new ResponseEntity<>(twinCollection, HttpStatus.OK );
    }
